# hexkit

./: .gitlab-ci.yml  Cargo.toml  README.md
core/: Cargo.toml
core/src/: geo.rs  grid.rs  lib.rs  search.rs  ui.rs
core/src/grid/: axial.rs  coords.rs  cube.rs  offset.rs  shape.rs
core/src/grid/coords/: cube.rs  offset.rs
core/src/grid/coords/cube/: vec.rs
core/src/grid/cube/: dir.rs  vec.rs
core/src/search/: astar.rs  bfs.rs
core/src/ui/: gridview.rs  scroll.rs
ggez/: Cargo.toml
ggez-demo/: Cargo.toml
ggez-demo/src/: assets.rs  entity.rs  main.rs  menu.rs  movement.rs  ui.rs  world.rs
ggez/src/: lib.rs  menu.rs
hexacore/: Cargo.toml  README.md
hexacore/src/: geo.rs  grid.rs  lib.rs  search.rs  ui.rs
hexacore/src/grid/: coords.rs
hexacore/src/grid/coords/: offset.rs
hexacore/src/ui/: change.rs  gridview.rs  scroll.rs
hexggez/: Cargo.toml  README.md
hexggez/src/: lib.rs  menu.rs
hexspace/: Cargo.toml  README.md
hexspace/src/: assets.rs  main.rs  ui.rs  world.rs
