[package]
name = "hexworld"
version = "0.1.0"
authors = ["Roman S. Borschel <roman@pkaboo.org>"]
edition = "2018"

[dependencies]
nalgebra = "^0.17"
# num-rational = "^0.2"
num-traits = "^0.2"
num-derive = "^0.2"
either = "^1.5"
# alga = "^0.7"

[dev-dependencies]
# quickcheck = "^0.7"
quickcheck = { git = "https://github.com/romanb/quickcheck" }
rand = "^0.6"
