[package]
name = "hexspace"
version = "0.1.0"
authors = ["Roman S. Borschel <roman@pkaboo.org>"]
edition = "2018"
license = "MPL-2.0"
description = "A game prototype playground for hexggez."
readme = "README.md"

[dependencies]
hexacore = { path = "../hexacore" }
hexggez = { path = "../hexggez" }
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }

